# ospsd-team-11

./: .env.example  .gitignore  README.md  design.md  mkdocs.yml  pyproject.toml
.circleci/: config.yml
components/google_calendar_client_impl/src/google_calendar_client_impl/: __init__.py  client_impl.py
components/google_calendar_service/: README.md  pyproject.toml
components/google_calendar_service/src/google_calendar_service/: __init__.py  main.py  models.py  session_store.py  settings.py
components/google_calendar_service/tests/: test_main.py  test_oauth.py  test_session_store.py
components/google_calendar_service_adapter/: pyproject.toml
components/google_calendar_service_adapter/src/google_calendar_service_adapter/: __init__.py  client_adapter.py  event_adapter.py
components/google_calendar_service_api_client/: README.md  pyproject.toml
components/google_calendar_service_api_client/google_calendar_service_client/: __init__.py
components/google_calendar_service_api_client/google_calendar_service_client/api/default/: callback_auth_callback_get.py  create_event_events_post.py  delete_event_events_event_id_delete.py  get_event_events_event_id_get.py  health_health_get.py  list_events_between_events_between_get.py  list_events_events_get.py  login_auth_login_get.py  logout_auth_logout_post.py  update_event_events_event_id_patch.py
components/google_calendar_service_api_client/google_calendar_service_client/models/: __init__.py  attendee_request.py  attendee_response.py  event_create_request.py  event_envelope.py  event_response.py  event_update_request.py  events_envelope.py  status_response.py
tests/e2e/: test_application.py  test_application_ci.py
